# chatgpt-creator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/chatgpt_signup/: __init__.py  async_signup.py  cli.py  config.py  imap_otp.py  retry.py  signup.py  storage.py
